# vibeplay

./: CURRENT_CODE_STATE.md  README.md
backend/: pyproject.toml
backend/ai_playground_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: main.py
frontend/: DOMAIN_COHERENCE_PLAN.md  REVIEW_SUMMARY.md  TECHNICAL_REVIEW_InstructionGeneration.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: DomainSelector.tsx  FullSpectrumLanding.tsx  GuidedEntryWizard.tsx  InterestVoteBar.tsx  SolutionTypePreview.tsx  SolutionTypeTabs.tsx  WaitlistForm.tsx
frontend/src/components/agent/: AgentBottomBar.tsx  AgentCompletionModal.tsx  AgentGlossaryPanel.tsx  AgentPlaygroundShell.tsx  AgentPlaygroundV3Shell.tsx  AgentStepperNav.tsx  AgentTileSelector.tsx  AgentTooltip.tsx  StageErrorBoundary.tsx  WorkSavedSidebar.tsx
frontend/src/components/layout/: BottomActionBar.tsx  BrandHeader.tsx  SessionSidebar.tsx  StepperNav.tsx  ThemeToggle.tsx
frontend/src/components/shared/: CompletionModal.tsx  CountUpNumber.tsx  GlossaryPanel.tsx  InsightCard.tsx  (+4 more)
frontend/src/hooks/: useTheme.ts
frontend/src/lib/: api.ts  businessViewHelpers.ts  constants.ts  domainData.ts  generateDeploymentPDF.ts  glossaryData.ts  solutionTypes.ts  useDomainSubtitle.ts  wizardMappings.ts
frontend/src/store/: agentPlaygroundStore.ts  agentTypes.ts  playgroundStore.ts  types.ts
prompts/: PHASE-1-TOOLTIPS-AND-EXPLAINERS.md  PHASE-2-GLOSSARY-PANEL.md  PHASE-3-PERSONA-TOGGLE.md
(+75 files in other folders)
